Aanpasbaarheid geslacht uitgezet

--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -30,7 +30,7 @@
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label class="h4">Geslacht</label>
+                                    <label class="h4">Biologisch geslacht</label>
                                     @if (Model.Patient.GenderId == 0)
                                     {
                                         <p>Man</p>
@@ -225,7 +225,7 @@ else if (User.IsInRole("doctor"))
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label class="h4">Geslacht</label>
+                                    <label class="h4">Biologisch geslacht</label>
                                     @if (Model.Doctor.GenderId == 0)
                                     {
                                         <p>Man</p>
