--- a/Webapp/Webapp/Views/Profile/PatientDetails.cshtml
+++ b/Webapp/Webapp/Views/Profile/PatientDetails.cshtml
@@ -24,7 +24,7 @@
                         {
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label class="h4">Geslacht</label>
+                                    <label class="h4">Biologisch geslacht</label>
                                     <p>@Model.Patient.Genders[Model.Patient.GenderId]</p>
                                 </div>
                             </div>
