--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -36,16 +36,13 @@
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="Gender" class="h4">Geslacht</label>
-                                    <label typeof="text" class="form-control">
+                                    <label for="Gender" class="h4">Biologisch geslacht</label>
+                                    <select tag="option" input asp-for="Patient.GenderId" class="form-control" id="gender" placeholder="Voer je biologisch geslacht in" title="Voer je biologisch geslacht in." disabled>
                                         @foreach (string gender in Model.Patient.Genders)
                                         {
-                                            if (Model.Patient.Genders.IndexOf(gender) == Model.Patient.GenderId)
-                                            {
-                                               @gender
-                                            }
+                                            <option value="@Model.Patient.Genders.IndexOf(gender)">@gender</option>
                                         }
-                                    </label>
+                                    </select>
                                 </div>
                             </div>
 
@@ -240,8 +237,8 @@ else if (User.IsInRole("doctor"))
 
                             <div class="form-group">
                                 <div class="col-xs-6">
-                                    <label for="Gender" class="h4">Geslacht</label>
-                                    <select tag="option" input asp-for="Doctor.GenderId" class="form-control" id="gender" placeholder="Voer je geslacht in" title="Voer je geslacht in.">
+                                    <label for="Gender" class="h4">Biologisch Geslacht</label>
+                                    <select tag="option" input asp-for="Doctor.GenderId" class="form-control" id="gender" placeholder="Voer je biologisch geslacht in" title="Voer je biologisch geslacht in." disabled>
                                         @foreach (string gender in Model.Doctor.Genders)
                                          {
                                             <option value="@Model.Doctor.Genders.IndexOf(gender)">@gender</option>
