App naar Nederlands

--- a/Webapp/Webapp/Views/Department/Details.cshtml
+++ b/Webapp/Webapp/Views/Department/Details.cshtml
@@ -11,25 +11,25 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            Naam
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            Beschrijving
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Active)
+            Actief
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Active)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.InstitutionId)
+            Institutie
         </dt>
         <dd>
             @Html.DropDownListFor(model => model.InstitutionId,
