--- a/Webapp/Webapp/Views/Department/Create.cshtml
+++ b/Webapp/Webapp/Views/Department/Create.cshtml
@@ -12,17 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Beschrijving     </label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InstitutionId" class="control-label"></label>
+                <label asp-for="InstitutionId" class="control-label">Institutie</label>
                 @Html.DropDownListFor(model => model.InstitutionId,
                     Model.Institutions,
                     new { @class = "form-control" })
