--- a/Webapp/Webapp/Views/Department/Edit.cshtml
+++ b/Webapp/Webapp/Views/Department/Edit.cshtml
@@ -13,24 +13,24 @@
         <form asp-action="Edit">
             <input asp-for="Id" type="hidden"/>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label asp-for="Description" class="control-label">Beschrijving</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                        <input asp-for="Active" /> Actief
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <label asp-for="InstitutionId" class="control-label"></label>
+                <label asp-for="InstitutionId" class="control-label">Institutie</label>
                 @Html.DropDownListFor(model => model.InstitutionId,
                     Model.Institutions,
                     new { @class = "form-control" })
