--- a/Webapp/Webapp/Views/Doctor/Index.cshtml
+++ b/Webapp/Webapp/Views/Doctor/Index.cshtml
@@ -28,7 +28,7 @@
                     <td>@Html.DisplayFor(modelItem => item.Name)</td>
                     <td>@Html.DisplayFor(modelItem => item.Genders[item.GenderId])</td>
                     <td>
-                        @if (User.IsInRole("admin, doctor"))
+                        @if (User.IsInRole("admin"))
                         {
                             @Html.ActionLink("Details", "Details", new { id = item.EmployeeNumber })
                         }
