--- a/Webapp/Webapp/Views/TreatmentType/Create.cshtml
+++ b/Webapp/Webapp/Views/TreatmentType/Create.cshtml
@@ -27,7 +27,7 @@
                 <label asp-for="DepartmentId" class="control-label"></label>
                 @Html.DropDownListFor(model => model.DepartmentId,
                     Model.Departments,
-                    "Select department",
+                    "Selecteer afdeling",
                     new { @class = "form-control" })
             </div>
             <div class="form-group">
