--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -26,7 +26,7 @@
                     <td>@item.Name</td>
                     <td>@item.Genders[item.GenderId]</td>
                     <td>@item.Birth.ToShortDateString()</td>
-                    @if (item.Status == "Toegang")
+                    @if (item.Status)
                     {
                     <td>
                         @Html.ActionLink("Details", "PatientDetails", "Profile", new { id = item.UserId })
