--- a/Webapp/Webapp/Views/Patient/Index.cshtml
+++ b/Webapp/Webapp/Views/Patient/Index.cshtml
@@ -17,7 +17,7 @@
                 <th>Geslacht</th>
                 <th>Geboortedatum</th>
                 <th>Acties</th>
-            </tr>
+                </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
@@ -26,10 +26,13 @@
                     <td>@item.Name</td>
                     <td>@item.Genders[item.GenderId]</td>
                     <td>@item.Birth.ToShortDateString()</td>
-                    @if (item.AccessToDoctor)
+                   @if (item.AccessToDoctor)
                     {
                     <td>
-                        @Html.ActionLink("Details", "PatientDetails", "Profile", new { id = item.UserId })
+                       @if (Context.User.IsInRole("Doctor"))
+                        {
+                            @Html.ActionLink("Details", "PatientDetails", "Profile", new { id = item.UserId })
+                        }
                     </td>
                     }
                 </tr>
