--- a/Webapp/Webapp/Views/Department/Create.cshtml
+++ b/Webapp/Webapp/Views/Department/Create.cshtml
@@ -10,14 +10,14 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post">
             <div class="form-group">
                 <label asp-for="Name" class="control-label">Naam</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label">Beschrijving     </label>
+                <label asp-for="Description" class="control-label">Beschrijving</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
@@ -28,7 +28,7 @@
                     new { @class = "form-control" })
             </div>
             <div class="form-group">
-                <input type="submit" value="Opslaan" class="btn btn-default" />
+                <input asp-controller="Department" asp-action="Create" type="submit" value="Opslaan" class="btn btn-default" />
             </div>
         </form>
     </div>
