added edit button in Profile/Index

--- a/Webapp/Webapp/Views/Profile/Index.cshtml
+++ b/Webapp/Webapp/Views/Profile/Index.cshtml
@@ -192,7 +192,10 @@
                                     Contact persoon naam
                                 </div>
                             </div>
-
+                            <div class="col-xs-12">
+                                <br>
+                                <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
+                            </div>
                         </form>
                     </div><!--/tab-pane-->
                 </div><!--/tab-pane-->
@@ -330,7 +333,10 @@ else if (User.IsInRole("doctor"))
                                     Telefoonnummer
                                 </div>
                             </div>
-
+                            <div class="col-xs-12">
+                                <br>
+                                <a asp-controller="profile" asp-action="edit" class="btn btn-primary"><i class="fa fa-edit"></i> Aanpassen</a>
+                            </div>
                         </form>
                     </div><!--/tab-pane-->
                     <!--     Hier komt de code voor de tab privacy-->
