--- a/Webapp/Webapp/Views/Profile/DoctorDetails.cshtml
+++ b/Webapp/Webapp/Views/Profile/DoctorDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserViewModel
 
 @{
-    ViewData["Title"] = "DoctorDetails";
+    ViewData["Title"] = "Details arts";
 }
 
 <div class="container bootstrap snippet">
