--- a/Webapp/Webapp/Views/Profile/Edit.cshtml
+++ b/Webapp/Webapp/Views/Profile/Edit.cshtml
@@ -18,12 +18,12 @@
             <div class="row">
                 <div class="col-sm-9">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
-                        <li><a data-toggle="tab" href="#messages">Privacy</a></li>
+                        <li><a data-toggle="tab" href="#alg">Algemeen</a></li>
+                        <li><a data-toggle="tab" href="#priv">Privacy</a></li>
                     </ul>
 
                     <div class="tab-content">
-                        <div class="tab-pane active" id="home">
+                        <div class="tab-pane active" id="alg">
                             <hr>
 
 
@@ -118,7 +118,7 @@
                             <hr>
 
                         </div><!--/tab-pane-->
-                        <div class="tab-pane" id="messages">
+                        <div class="tab-pane" id="priv">
 
                             <h2></h2>
 
@@ -206,7 +206,7 @@
             </div><!--/col-9-->
         </form>
     </div><!--/row-->
-    
+
 }
 else if (User.IsInRole("doctor"))
 {
@@ -219,12 +219,12 @@ else if (User.IsInRole("doctor"))
             <div class="row">
                 <div class="col-sm-9">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a data-toggle="tab" href="#home">Algemeen</a></li>
-                        <li><a data-toggle="tab" href="#privacy">Privacy</a></li>
+                        <li><a data-toggle="tab" href="#alg">Algemeen</a></li>
+                        <li><a data-toggle="tab" href="#priv">Privacy</a></li>
                     </ul>
 
                     <div class="tab-content">
-                        <div class="tab-pane active" id="home">
+                        <div class="tab-pane active" id="alg">
                             <hr>
 
 
@@ -240,9 +240,9 @@ else if (User.IsInRole("doctor"))
                                     <label for="Gender" class="h4">Biologisch Geslacht</label>
                                     <select tag="option" input asp-for="Doctor.GenderId" class="form-control" id="gender" placeholder="Voer je biologisch geslacht in" title="Voer je biologisch geslacht in." disabled>
                                         @foreach (string gender in Model.Doctor.Genders)
-                                         {
+                                        {
                                             <option value="@Model.Doctor.Genders.IndexOf(gender)">@gender</option>
-                                         }
+                                        }
                                     </select>
                                 </div>
                             </div>
@@ -294,7 +294,7 @@ else if (User.IsInRole("doctor"))
                             <hr>
                         </div><!--/tab-pane-->
                         <!-- Hier komt de code voor de tab privacy-->
-                        <div class="tab-pane" id="privacy">
+                        <div class="tab-pane" id="priv">
 
                             <div class="form-group">
                                 <div class="col-xs-6">
@@ -321,6 +321,17 @@ else if (User.IsInRole("doctor"))
             </div><!--/col-9-->
         </form>
     </div><!--/row-->
-
-
 }
+    @section Scripts {
+        <script>
+            $('#alg').click(function () {
+                $('#priv').removeClass("active");
+                $('#alg').addClass("active");
+            });
+
+            $('#priv').click(function () {
+                $('#priv').addClass("active");
+                $('#alg').removeClass("active");
+            });
+        </script>
+    }
