--- a/Webapp/Webapp/Views/Patient/Treatment.cshtml
+++ b/Webapp/Webapp/Views/Patient/Treatment.cshtml
@@ -94,17 +94,19 @@ else if (User.IsInRole("patient"))
                                 <span asp-validation-for="TreatmentDetailViewModels[0].Description.Description" class="text-danger"></span>
                             </div>
                         }
-
-                        <div class="col-xs-12">
-                            <label for="Comments"><h4>Opmerkingen</h4></label>
-                            @foreach (Comment comment in Model.TreatmentDetailViewModels[0].Comments)
-                            {
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">@comment.Title</div>
-                                    <div class="panel-body"> @comment.Description </div>
-                                </div>
-                            }
-                        </div>
+                        @if (Model.TreatmentDetailViewModels[0].Comments.Count > 0)
+                        {
+                            <div class="col-xs-12">
+                                <label for="Comments"><h4>Opmerkingen</h4></label>
+                                @foreach (Comment comment in Model.TreatmentDetailViewModels[0].Comments)
+                                {
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">@comment.Title</div>
+                                        <div class="panel-body"> @comment.Description </div>
+                                    </div>
+                                }
+                            </div>
+                        }
 
                         @if (User.IsInRole("doctor"))
                         {
