Error message bij login

--- a/Webapp/Webapp/Views/Home/Index.cshtml
+++ b/Webapp/Webapp/Views/Home/Index.cshtml
@@ -22,7 +22,9 @@
             <div align="center">
                 <form class="loginForm" id="loginForm" method="post">
                     <h2>LOGIN</h2>
+                    <h6 style="color:red;font-weight:bold">@ViewBag.LoginResult</h6>
                     <div class="form-group">
+
                         <label for="username" class="col-sm-4 control-label">Email </label>
                         <div class="col-sm-8">
                             <input type="text" id="username" placeholder="username" class="form-control" name="username">
